--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">SizeEstimator</string>
+    <string name="measure_button_label">Measure</string>
+    <string name="size_prefix">"Size: "</string>
+    <string name="photo_capture_failed">Photo capture failed</string>
 </resources>
